0.3.6
- Beaker is now part of "extras" in
  setup.py instead of "install_requires".
  This to produce a lighter weight install
  for those who don't use the caching
  as well as to conform to Pyramid 
  deployment practices.  [ticket:154]
  
- Fixed missing **extra collection in 
  setup.py which prevented setup.py
  from running 2to3 on install.
  [ticket:148]
  
- New flag on Template, TemplateLookup - 
  strict_undefined=True, will cause
  variables not found in the context to 
  raise a NameError immediately, instead of
  defaulting to the UNDEFINED value.

- The range of Python identifiers that
  are considered "undefined", meaning they
  are pulled from the context, has been 
  trimmed back to not include variables 
  declared inside of expressions (i.e. from
  list comprehensions), as well as 
  in the argument list of lambdas.  This
  to better support the strict_undefined
  feature.  The change should be 
  fully backwards-compatible but involved
  a little bit of tinkering in the AST code,
  which hadn't really been touched for 
  a couple of years, just FYI.
  
0.3.5
- The <%namespace> tag allows expressions
  for the `file` argument, i.e. with ${}.
  The `context` variable, if needed,
  must be referenced explicitly.
  [ticket:141]

- ${} expressions embedded in tags, 
  such as <%foo:bar x="${...}">, now 
  allow multiline Python expressions.
  
- Fixed previously non-covered regular 
  expression, such that using a ${} expression 
  inside of a tag element that doesn't allow 
  them raises a CompileException instead of
  silently failing.

- Added a try/except around "import markupsafe".
  This to support GAE which can't run markupsafe.
  [ticket:151] No idea whatsoever if the 
  install_requires in setup.py also breaks GAE, 
  couldn't get an answer on this.
  
0.3.4
- Now using MarkupSafe for HTML escaping,
  i.e. in place of cgi.escape().  Faster
  C-based implementation and also escapes
  single quotes for additional security.